--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,50 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  color-scheme: light dark;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #fcfcfc;
+}
+
+a {
+  font-weight: 500;
+  color: #548687;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #75a8a9;
+}
+
+body {
+  margin: 0;
+  display: flex;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+.nav-item {
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
+.article-card {
+  border: black solid;
+  margin: 1.5%;
+}
+.article-title {
+  text-decoration: underline;
+  font-size: 19px;
+}
+.article-topic {
+  text-transform: capitalize;
+}
+.article-author {
+  display: inline;
+}
+.article-img {
+  width: 30%;
 }
