--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 1680px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 
   color-scheme: light dark;
@@ -33,8 +33,13 @@ h1 {
   font-size: 20px;
 }
 
+.articles-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat(1fr, 1fr);
+}
 .article-card {
-  border: black solid;
+  border: #a7a0a0 solid;
   margin: 1.5%;
 }
 .article-title {
@@ -48,5 +53,5 @@ h1 {
   display: inline;
 }
 .article-img {
-  width: 30%;
+  width: 90%;
 }
