--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,7 @@ h1 {
   box-shadow:
     0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  text-decoration: underline;
 }
 .comment-container {
   margin: 10px 50px 10px 50px;
