--- a/src/App.css
+++ b/src/App.css
@@ -145,3 +145,10 @@ h1 {
   width: 60%;
   height: 60%;
 }
+
+#selector {
+  padding: 0.5em;
+  margin: 0;
+  border-radius: 8px;
+  outline: none;
+}
