--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,29 @@ h1 {
   border-radius: 8px;
   outline: none;
 }
+
+header {
+  display: flexbox;
+  align-items: center;
+  justify-content: center;
+}
+
+.avatar_url {
+  border-radius: 50%;
+  max-height: 50px;
+  float: right;
+  margin-right: 10%;
+}
+nav {
+  margin-left: 13%;
+}
+.user-details {
+  margin: 15px;
+  width: 60rem;
+}
+
+.log-out-button {
+  padding: 10px;
+  border-radius: 15px;
+  width: 10%;
+}
