--- a/src/App.css
+++ b/src/App.css
@@ -145,10 +145,13 @@ h1 {
   width: 60%;
   height: 60%;
 }
+.select-container {
+  margin-left: 20%;
+}
 
-#selector {
+.selector {
   padding: 0.5em;
-  margin: 0;
+  margin: 3px;
   border-radius: 8px;
   outline: none;
 }
