changing colour of error messages for better UX

--- a/src/App.css
+++ b/src/App.css
@@ -188,3 +188,10 @@ nav {
   padding: 0px;
   margin-right: 10%;
 }
+
+.error-msg {
+  color: darkred;
+}
+.login-link {
+  text-decoration: underline;
+}
